Fix alignment of items in header

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ input[type="search"]{
     padding-bottom: .5rem;
     gap:1rem;
     box-shadow: 10px 0px 7px 7px rgb(167, 167, 167);
+    padding-right: 40px;
 }
 .header-first-row{
     display: grid;
@@ -83,18 +84,24 @@ input[type="search"]{
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(3, min-content);
-    justify-self: center;
+    justify-self: end;
 }
 
 
 .header-second-row{
-    padding-left: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 .header-second-row>:nth-child(1){
     display: grid;
     grid-template: 1fr 2fr / 1fr 4fr;
+    justify-self: start;
+    gap: 10px;
+    font-weight: bold;
+}
+.header-second-row>:nth-child(1)>:nth-child(3){
+    font-size: 1.3rem;
 }
 .header-second-row>:nth-child(1) > img{
     grid-row: 1 / 3;
